<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="always"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to_dreamdecoder_explore_the_mysteries_of_your_dreams_and_uncover_their_hidden_meanings_your_journey_to_understanding_your_dreams_starts_here"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="346dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="110dp">

        <!-- App Logo and Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/team"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/dreamdecoders"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Welcome Message -->

        <!-- Additional content can go here -->

    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/white"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="655dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:id="@+id/goToMainScreen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView122"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/bottom_btn1"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView1222"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/Homee"
                    android:textAlignment="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView1256"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/settings"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView1267"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/Settings"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>
</androidx.constraintlayout.widget.ConstraintLayout>

