<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/purple">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="900sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:overScrollMode="always">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:background="#2E0854"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="60sp"
                        android:layout_height="60sp"
                        android:layout_marginStart="32sp"
                        android:layout_marginTop="32sp"
                        android:contentDescription="@string/TOdo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/team" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:text="@string/dreamdecoders"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                        app:layout_constraintStart_toEndOf="@+id/imageView8"
                        app:layout_constraintTop_toTopOf="@+id/imageView8"
                        app:layout_constraintVertical_bias="0.636" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32sp"
                    android:layout_marginTop="32sp"
                    android:text="@string/customize_your_settings_nhere"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        app:cardCornerRadius="10sp"
                        app:cardElevation="3sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/profileBtn">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="60sp"
                                android:layout_height="60sp"
                                android:layout_gravity="center"
                                android:layout_margin="16sp"
                                android:background="@drawable/background_oval2">

                                <ImageView
                                    android:id="@+id/options_imageView_profile"
                                    android:layout_width="47sp"
                                    android:layout_height="53sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="0.538"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintVertical_bias="0.571"
                                    app:srcCompat="@drawable/user"
                                    tools:ignore="ContentDescription" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/options_textview_profile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20sp"
                                android:text="@string/your_profile"
                                android:textAlignment="center"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        app:cardCornerRadius="10sp"
                        app:cardElevation="3sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/options_our_team">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="60sp"
                                android:layout_height="60sp"
                                android:layout_gravity="center"
                                android:layout_margin="16sp"
                                android:background="@drawable/background_oval2">

                                <ImageView
                                    android:id="@+id/options_imageView_team"
                                    android:layout_width="50sp"
                                    android:layout_height="54sp"
                                    android:contentDescription="@string/ToDo"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="0.571"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/team" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/options_textView_team"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20sp"
                                android:text="@string/meet_our_team"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/goToMainScreen"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/imageView122"
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        app:srcCompat="@drawable/bottom_btn1"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView1222"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4sp"
                        android:text="@string/Home"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/imageView1256"
                        android:layout_width="20sp"
                        android:layout_height="20sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8sp"
                        app:srcCompat="@drawable/sett"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView1267"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4sp"
                        android:text="@string/settings"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
